--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="default_text_size">20sp</dimen>
+    <dimen name="margin_medium">16dp</dimen>
+    <dimen name="content_detail_text_size_medium">18sp</dimen>
 </resources>
