--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="ContentText">
+    </style>
+
+    <style name="ContentDetailText">
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/cardview_dark_background</item>
+        <item name="android:textSize">@dimen/content_detail_text_size_medium</item>
+    </style>
 </resources>
