--- a/app/src/main/res/xml/content_detail_scene.xml
+++ b/app/src/main/res/xml/content_detail_scene.xml
@@ -17,10 +17,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="0.0"
-            app:layout_constraintBottom_toBottomOf="@+id/text_status_value"
-            app:layout_constraintStart_toEndOf="@+id/text_status_value"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/text_status_value" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.13"
+            app:layout_constraintHorizontal_bias="0.498" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -29,9 +31,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="1.0"
+            android:scaleX="2.0"
+            android:scaleY="2.0"
             android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/text_status_value"
-            app:layout_constraintStart_toEndOf="@+id/text_status_value"
-            app:layout_constraintTop_toTopOf="@+id/text_status_value" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.13"
+            app:layout_constraintHorizontal_bias="0.498" />
     </ConstraintSet>
 </MotionScene>
